variables.Variables.scala.error
Compilation error:
Variables:11: error: identifier expected but ')' found.
    while (y!=x:){backward()}}
                ^Variables:11: error: ')' expected but '}' found.
    while (y!=x:){backward()}}
                             ^