variables.Variables.scala.code


if (isOverBaggle()) {}
	else{
    var x=0
    var y=0
    while (isOverBaggle ==false ){ forward() 
      x+=1                            
    }
  	pickupBaggle()
  	while (y!=x:){backward()}}

  	